--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -4,7 +4,7 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Трудоход
-    link(rel="stylesheet" href="/style.css")
+    link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet")
 
   body
-    include test.pug
+    include section-header.pug
