--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -10,3 +10,4 @@ html(lang="ru")
     include section-header.pug
     include section-save-time.pug
     include section-apm.pug
+    include section-services.pug
