--- a/css/_style.css
+++ b/css/_style.css
@@ -4,3 +4,4 @@
 @import 'sections/save-time.css';
 @import 'sections/apm.css';
 @import 'sections/services.css';
+@import 'sections/how-it-works.css';
