--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -11,3 +11,4 @@ html(lang="ru")
     include section-save-time.pug
     include section-apm.pug
     include section-services.pug
+    include section-how-it-works.pug
