--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -12,3 +12,4 @@ html(lang="ru")
     include section-apm.pug
     include section-services.pug
     include section-how-it-works.pug
+    include section-offer.pug
