--- a/css/_style.css
+++ b/css/_style.css
@@ -6,3 +6,4 @@
 @import 'sections/services.css';
 @import 'sections/how-it-works.css';
 @import 'sections/offer.css';
+@import 'sections/plus-and-minus.css';
