--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -13,3 +13,4 @@ html(lang="ru")
     include section-services.pug
     include section-how-it-works.pug
     include section-offer.pug
+    include section-plus-and-minus.pug
