--- a/pug/section-offer.pug
+++ b/pug/section-offer.pug
@@ -2,15 +2,22 @@ div.section-offer
   section.technology
     div.cont
       h2.main-heading Технология адаптивного управления персоналом
-      p.sub-heading Это новая технология в России, которая уже зарекомендовала себя на европейском и американском рынке.
+
+      p.sub-heading
+        | Это новая технология
+        br
+        | в России, которая уже зарекомендовала
+        br
+        | себя на европейском и американском рынке.
+
       p.desc Вы можете сами использовать все методики аутстаффинга, серьезно сократить затраты и исключить налоговые риски, и мы вам в этом поможем.
 
   section.warning
     div.cont
       h2.main-heading Внимание!
-      p.desc С 1 января 2016 года Федеральным законом №116-ФЗ #[span.red в России ограничена деятельность аутстаффинговых компаний] (частных агентств занятости),а стоимость их услуг станет неоправданно завышенной. Многие из них начнут использовать незаконные методы работы и подвергать Вас рискам.
+      p.desc С 1 января 2016 года Федеральным законом №116-ФЗ #[span.text-red в России ограничена деятельность аутстаффинговых компаний] (частных агентств занятости),а стоимость их услуг станет неоправданно завышенной. Многие из них начнут использовать незаконные методы работы и подвергать Вас рискам.
 
   section.scheme
     div.cont
-      h2.main-heading Мы предлагаем «белую» и прозрачную схему работы.
+      h2.main-heading Мы предлагаем «белую»#[br] и прозрачную схему работы.
       button.btn-more Узнать подробнее
