--- a/css/_style.css
+++ b/css/_style.css
@@ -7,3 +7,4 @@
 @import 'sections/how-it-works.css';
 @import 'sections/offer.css';
 @import 'sections/plus-and-minus.css';
+@import 'sections/reviews.css';
