--- a/pug/section-apm.pug
+++ b/pug/section-apm.pug
@@ -1,27 +1,6 @@
-section.section-apm.cont
-  h2.main-heading APM adaptive personnel management — это ...
+section.section-reviews.cont
+  h2.main-heading Что о нас говорят клиенты?
 
-  div.apm-items
-    div.apm-item
-      div.color-box №1 в #[br] России
-      p.desc Первая компания в России, предоставляющая услуги по адаптивному управлению персоналом;
-
-    div.apm-item
-      div.color-box Работаем на #[br] территории РФ
-      p.desc Работаем на всей территории Российской Федерации;
-
-    div.apm-item
-      div.color-box 15280 #[br] сотрудников в базе
-      p.desc В нашей базе тысячи потенциальных сотрудников различных сфер деятельности, готовых уже сейчас выйти на работу;
-
-    div.apm-item
-      div.color-box Экономия #[br] до 50%
-      p.desc Мы разработали уникальные технологии, которые помогут Вам сэкономить ваши деньги и время;
-
-    div.apm-item
-      div.color-box 12 лет #[br] работы
-      p.desc Наша компания работает на рынке управления персоналом с 2003 года;
-
-    div.apm-item
-      div.color-box Работаем #[br] 24/7
-      p.desc Наша служба поддержки клиентов работает 24 часа в сутки, 7 дней в неделю без выходных и праздников.
+  div.reviews-wrapper
+    div.review
+      
