--- a/pug/section-plus-and-minus.pug
+++ b/pug/section-plus-and-minus.pug
@@ -7,18 +7,18 @@ section.section-plus-and-minus
       br
       | которые мы полностью исключаем:
 
-    ul
-      li
+    ul.plus-minus-wrapper
+      li.item
         | #[span.text-bold Заказчик компенсирует все издержки исполнителя]
         | (Заработная плата, налоги, доставка, униформа, HR, реклама и т.д. + своя прибыль до 100%).
         | #[span.text-bold Все эти затраты скрыты в тарифе.]
 
-      li
+      li.item
         | #[span.text-bold Чем больше аутсорсинговая компания,]
         | и чем «громче» ее имя,
         | #[span.text-bold тем больше у нее издержек – а это все компенсируете Вы.]
 
-      li
+      li.item
         | #[span.text-bold Возможны проблемы с]
         | персоналом
         | #[span.text-bold аутсорсинговых компаний]
@@ -26,23 +26,23 @@ section.section-plus-and-minus
         | #[span.text-bold важно вывести персонал и получить свою прибыль,]
         | не задумываясь о последствиях.
 
-      li
+      li.item
         | #[span.text-bold Работники аутсорсинговых компаний получали минимальные зарплаты]
         | (меньше, чем штатные сотрудники заказчика. Как правило такие работники часто меняют место работы, не мотивированы на качество выполнения работы. Так как их права ущемлены, у них отсутствует корпоративный дух, чувство ответственности, стимул к росту и развитию.
 
-      li
+      li.item
         | #[span.text-bold Вы не можете проверить]
         | правильность
         | #[span.text-bold оформления персонала]
         | аутсорсинговых омпаний.
 
-      li
+      li.item
         | #[span.text-bold Сезонность предоставления персонала,]
         | т.к. основная масса персонала
         | #[span.text-bold аутсорсинговых компаний в сезон отдается ключевым клиентам,]
         | а весь основной бизнес страдает и не может нормально отработать сезон.
 
-      li
+      li.item
         | #[span.text-bold Существуют задержки с предоставлением персонала,]
         | сбои в обеспечении персоналом по заказу (
         | #[span.text-bold сложно заставить не]
@@ -52,10 +52,10 @@ section.section-plus-and-minus
         | #[span.text-bold Call-центры аутсорсинговых компаний не работают в ночное время]
         | и Ваш личный менеджер не ответит на Ваш звонок.
 
-      li
+      li.item
         | #[span.text-bold Постоянная ротация персонала.]
 
-      li
+      li.item
         | #[span.text-bold Присутствуют колоссальные налоговые риски.]
 
   div.success
