--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -14,3 +14,4 @@ html(lang="ru")
     include section-how-it-works.pug
     include section-offer.pug
     include section-plus-and-minus.pug
+    include section-reviews.pug
