--- a/pug/section-header.pug
+++ b/pug/section-header.pug
@@ -12,9 +12,6 @@ section.section-header
     h2.sub-heading 56 мин.
     p.desc Наш рекорд по скорости предоставления сотрудника
 
-    ul.key-adv
-      li.adv-item Подбор сотрудника бесплатно
-      li.adv-item Собственная система контроля персонала
-      li.adv-item Отсутствие налоговых и других рисков
+    include includes/advantages.pug
 
     button.btn-get-info #[span.bold Узнайте,] как быстро мы сможем найти Вам сотрудника
