Ready for adaptation

--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -43,6 +43,10 @@
       .about {
         font-size: 17px;
         font-weight: 300;
+
+        @media(max-width: $xxl) {
+          background-color: red;
+        }
       }
     }
   }
