--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -8,12 +8,12 @@ html(lang="ru")
 
   body
     include section-header.pug
-    include section-save-time.pug
-    include section-apm.pug
-    include section-services.pug
-    include section-how-it-works.pug
-    include section-offer.pug
-    include section-plus-and-minus.pug
-    include section-reviews.pug
-    include section-request-form.pug
-    include section-footer.pug
+    //- include section-save-time.pug
+    //- include section-apm.pug
+    //- include section-services.pug
+    //- include section-how-it-works.pug
+    //- include section-offer.pug
+    //- include section-plus-and-minus.pug
+    //- include section-reviews.pug
+    //- include section-request-form.pug
+    //- include section-footer.pug
