--- a/css/global.css
+++ b/css/global.css
@@ -45,10 +45,8 @@ input {
   outline: 0;
 }
 
-.cont {
-  width: 1170px;
-  margin: 0 auto;
-}
+
+/* GLOBAL CLASSES */
 
 .main-heading {
   font-size: 40px;
@@ -63,4 +61,32 @@ input {
 
 .text-bold {
   font-weight: 500;
+}
+
+
+/* CONTAINER */
+
+.cont {
+  width: 1320px;
+  margin: 0 auto;
+
+  @media(max-width: $xxl) {
+    width: 1120px;
+  }
+
+  @media(max-width: $xl) {
+    width: 912px;
+  }
+
+  @media(max-width: $lg) {
+    width: 688px;
+  }
+
+  @media(max-width: $md) {
+    width: 496px;
+  }
+
+  @media(max-width: $sm) {
+    width: 100%;
+  }
 }
