--- a/pug/section-header.pug
+++ b/pug/section-header.pug
@@ -14,4 +14,6 @@ section.section-header
 
     include includes/advantages.pug
 
-    button.btn-get-info #[span.bold Узнайте,] как быстро мы сможем найти Вам сотрудника
+    button.btn-get-info 
+      span.desktop #[span.bold Узнайте,] как быстро мы сможем найти Вам сотрудника
+      span.mobile Попробуйте
