--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -9,7 +9,7 @@ html(lang="ru")
   body
     include section-header.pug
     include section-save-time.pug
-    //- include section-apm.pug
+    include section-apm.pug
     //- include section-services.pug
     //- include section-how-it-works.pug
     //- include section-offer.pug
