--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -10,7 +10,7 @@ html(lang="ru")
     include section-header.pug
     include section-save-time.pug
     include section-apm.pug
-    //- include section-services.pug
+    include section-services.pug
     //- include section-how-it-works.pug
     //- include section-offer.pug
     //- include section-plus-and-minus.pug
