--- a/pug/section-how-it-works.pug
+++ b/pug/section-how-it-works.pug
@@ -12,4 +12,5 @@ section.section-how-it-works
       div.item
         p.desc Получите нового сотрудника
 
-  div.note Все заботы по управлению и администрированию мы возьмем на себя
+  div.note
+    div.inner Все заботы по управлению и администрированию мы возьмем на себя
