--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -11,7 +11,7 @@ html(lang="ru")
     include section-save-time.pug
     include section-apm.pug
     include section-services.pug
-    //- include section-how-it-works.pug
+    include section-how-it-works.pug
     //- include section-offer.pug
     //- include section-plus-and-minus.pug
     //- include section-reviews.pug
