--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -12,7 +12,7 @@ html(lang="ru")
     include section-apm.pug
     include section-services.pug
     include section-how-it-works.pug
-    //- include section-offer.pug
+    include section-offer.pug
     //- include section-plus-and-minus.pug
     //- include section-reviews.pug
     //- include section-request-form.pug
