--- a/pug/section-plus-and-minus.pug
+++ b/pug/section-plus-and-minus.pug
@@ -1,62 +1,63 @@
 section.section-plus-and-minus
-  div.cont
-    h2.main-heading
-      | #[span.text-red Минусы и риски] работы
-      br
-      | с частными агентствами занятости,
-      br
-      | которые мы полностью исключаем:
+  div.plus-and-minus
+    div.cont
+      h2.main-heading
+        | #[span.text-red Минусы и риски] работы
+        br
+        | с частными агентствами занятости,
+        br
+        | которые мы полностью исключаем:
 
-    ul.plus-minus-wrapper
-      li.item
-        | #[span.text-bold Заказчик компенсирует все издержки исполнителя]
-        | (Заработная плата, налоги, доставка, униформа, HR, реклама и т.д. + своя прибыль до 100%).
-        | #[span.text-bold Все эти затраты скрыты в тарифе.]
+      ul.plus-minus-wrapper
+        li.item
+          | #[span.text-bold Заказчик компенсирует все издержки исполнителя]
+          | (Заработная плата, налоги, доставка, униформа, HR, реклама и т.д. + своя прибыль до 100%).
+          | #[span.text-bold Все эти затраты скрыты в тарифе.]
 
-      li.item
-        | #[span.text-bold Чем больше аутсорсинговая компания,]
-        | и чем «громче» ее имя,
-        | #[span.text-bold тем больше у нее издержек – а это все компенсируете Вы.]
+        li.item
+          | #[span.text-bold Чем больше аутсорсинговая компания,]
+          | и чем «громче» ее имя,
+          | #[span.text-bold тем больше у нее издержек – а это все компенсируете Вы.]
 
-      li.item
-        | #[span.text-bold Возможны проблемы с]
-        | персоналом
-        | #[span.text-bold аутсорсинговых компаний]
-        | (наличие (актуальность) медицинских осмотров, судимость и т.д.). Для аутсорсинговых компаний
-        | #[span.text-bold важно вывести персонал и получить свою прибыль,]
-        | не задумываясь о последствиях.
+        li.item
+          | #[span.text-bold Возможны проблемы с]
+          | персоналом
+          | #[span.text-bold аутсорсинговых компаний]
+          | (наличие (актуальность) медицинских осмотров, судимость и т.д.). Для аутсорсинговых компаний
+          | #[span.text-bold важно вывести персонал и получить свою прибыль,]
+          | не задумываясь о последствиях.
 
-      li.item
-        | #[span.text-bold Работники аутсорсинговых компаний получали минимальные зарплаты]
-        | (меньше, чем штатные сотрудники заказчика. Как правило такие работники часто меняют место работы, не мотивированы на качество выполнения работы. Так как их права ущемлены, у них отсутствует корпоративный дух, чувство ответственности, стимул к росту и развитию.
+        li.item
+          | #[span.text-bold Работники аутсорсинговых компаний получали минимальные зарплаты]
+          | (меньше, чем штатные сотрудники заказчика. Как правило такие работники часто меняют место работы, не мотивированы на качество выполнения работы. Так как их права ущемлены, у них отсутствует корпоративный дух, чувство ответственности, стимул к росту и развитию.
 
-      li.item
-        | #[span.text-bold Вы не можете проверить]
-        | правильность
-        | #[span.text-bold оформления персонала]
-        | аутсорсинговых омпаний.
+        li.item
+          | #[span.text-bold Вы не можете проверить]
+          | правильность
+          | #[span.text-bold оформления персонала]
+          | аутсорсинговых омпаний.
 
-      li.item
-        | #[span.text-bold Сезонность предоставления персонала,]
-        | т.к. основная масса персонала
-        | #[span.text-bold аутсорсинговых компаний в сезон отдается ключевым клиентам,]
-        | а весь основной бизнес страдает и не может нормально отработать сезон.
+        li.item
+          | #[span.text-bold Сезонность предоставления персонала,]
+          | т.к. основная масса персонала
+          | #[span.text-bold аутсорсинговых компаний в сезон отдается ключевым клиентам,]
+          | а весь основной бизнес страдает и не может нормально отработать сезон.
 
-      li.item
-        | #[span.text-bold Существуют задержки с предоставлением персонала,]
-        | сбои в обеспечении персоналом по заказу (
-        | #[span.text-bold сложно заставить не]
-        | Вашего работника
-        | #[span.text-bold ночью разгружать товар]
-        | ), а
-        | #[span.text-bold Call-центры аутсорсинговых компаний не работают в ночное время]
-        | и Ваш личный менеджер не ответит на Ваш звонок.
+        li.item
+          | #[span.text-bold Существуют задержки с предоставлением персонала,]
+          | сбои в обеспечении персоналом по заказу (
+          | #[span.text-bold сложно заставить не]
+          | Вашего работника
+          | #[span.text-bold ночью разгружать товар]
+          | ), а
+          | #[span.text-bold Call-центры аутсорсинговых компаний не работают в ночное время]
+          | и Ваш личный менеджер не ответит на Ваш звонок.
 
-      li.item
-        | #[span.text-bold Постоянная ротация персонала.]
+        li.item
+          | #[span.text-bold Постоянная ротация персонала.]
 
-      li.item
-        | #[span.text-bold Присутствуют колоссальные налоговые риски.]
+        li.item
+          | #[span.text-bold Присутствуют колоссальные налоговые риски.]
 
   div.success
     div.cont
