--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -14,6 +14,6 @@ html(lang="ru")
     include section-how-it-works.pug
     include section-offer.pug
     include section-plus-and-minus.pug
-    //- include section-reviews.pug
+    include section-reviews.pug
     //- include section-request-form.pug
     //- include section-footer.pug
