--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -15,5 +15,5 @@ html(lang="ru")
     include section-offer.pug
     include section-plus-and-minus.pug
     include section-reviews.pug
-    //- include section-request-form.pug
+    include section-request-form.pug
     //- include section-footer.pug
