--- a/pug/section-request-form.pug
+++ b/pug/section-request-form.pug
@@ -1,7 +1,7 @@
 section.section-request-form
   div.cont
     form.form-wrapper
-      h2.heading Начни экономить уже сейчас!
+      h2.heading Начни экономить уже&nbsp;сейчас!
 
       input.input.input-name(type="text" placeholder="Имя")
       input.input.input-company(type="text" placeholder="Наименование компании")
