--- a/pug/_index.pug
+++ b/pug/_index.pug
@@ -16,4 +16,4 @@ html(lang="ru")
     include section-plus-and-minus.pug
     include section-reviews.pug
     include section-request-form.pug
-    //- include section-footer.pug
+    include section-footer.pug
